Update materi pertemuan 4

--- a/app/src/main/res/layout/kompone_view.xml
+++ b/app/src/main/res/layout/kompone_view.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -12,6 +13,14 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold|italic" />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        app:cornerRadius="20dp"
+        android:backgroundTint="@color/red"/>
+
 
     <Button
         android:layout_width="match_parent"
